mule-user-guide/v/4.0/shared-resources.adoc
= Shared Resources
:keywords: anypoint studio, shared resources, domains, multiple applications, share ports, domain project

Mule supports the ability to define selected connectors as common resources and expose them to all applications deployed under a same domain. These resources are known as shared resources. To host them, you must create a Mule Domain Project and then reference it on each of the projects that are meant to use the elements in it. Once defined, any Mule application associated with a particular domain can access resources in this file. Note that Mule applications can be associated with only one domain at a time.

Shared resources allow multiple development teams to work in parallel using the same set of reusable connectors. Defining these connectors as shared resources at the domain level allows the team to:

* Expose multiple services within the domain through the same port.
* Share the connection to persistent storage.
* Share services between applications through a well-defined interface.
* Ensure consistency between applications upon any changes because the configuration is only set in one place.

== Prerequisites

This document assumes that you are using Anypoint Studio with Mule runtime 4.0 or newer, or that you are building your applications using Studio and deploying them to Mule Standalone *4.0* runtime or newer. 

== Limitations

Defining flows, subflows, or any message processors as shared resources is not supported. Domains are not meant to share behavior. They are meant to share resources only.

== Basic Anatomy

=== Studio Project

The following files are key within the Mule Domain Project:

[%autowidth.spread]
|===
|`/src/main/mule/mule-domain-config.xml` |This is the shared resources configuration file. This file must have the `mule-domain-config.xml` file name.
|`pom.xml` |This is the dependencies file descriptor. It's just a Maven POM file with required plugins for domains projects.
|`/mule-artifact.json` |This file is a descriptor for the domain artifact.
|===

=== Domain Artifact

The following files are the ones that you can find when you package a domain into a jar file:

[%autowidth.spread]
|===
|*mule-domain-config.xml* |This is the shared resources configuration file. This file must have the `mule-domain-config.xml` file name.
|*/repository* |A maven like repository with all the dependencies of the domain.
|*/META-INF/maven/groupId/artifactId/pom.xml* |Artifact maven descriptor file.
|*/META-INF/mule-artifact/classloader-model.json* |Internal mule file used for dependency management.
|*/META-INF/mule-artifact/mule-artifact.json* |This file is a descriptor for the domain artifact.
|===

== Configuration

To use shared resources in your applications, you must complete the following tasks.

. <<Creating a New Domain, Create a new domain>>.
. Define one or more shared resources in that domain.
. <<Associating Applications with the Domain, Associate applications with the domain>>.
. <<Referencing Shared Resources, Reference shared resources>> in your applications.
. <<Deploying with Shared Resources, Deploy>> the domain and the applications with shared resources. Note that you can also deploy domain and apps together in a <<Deploying Domain Bundles, domain bundle>>.

The sections below describe the procedure for each of these steps.

== Creating a New Domain

To create a new domain in Anypoint Studio:

. In the top menu bar select, *File* > *New* > *Mule Domain Project*.
+
image:new+domain.png[new+domain] +
+
. Fill in the same fields as you would with a regular Mule Project:
+
image:create+new+domain.png[create+new+domain] +
+
Provide a name for the project, and select a runtime. Optionally, create a `.gitignore` file if you plan to share this project through git or GitHub.


=== Defining Shared Resources

You can configure the domain project that you just created in the previous step by defining shared resources in the `mule-domain-config.xml` file. You can define multiple resources in this configuration file. In Anypoint Studio, there are two different views for editing this file:

* Configuration file: This view should be the most familiar for those accustomed to the XML editor in regular Studio Mule projects.
* Global Elements: This view provides a graphical interface for defining shared resources.

You can add modules/connectors dependencies to you domain project so you can use them as shared resources.

=== Associating Applications with the Domain

[NOTE]
Applications may only be associated with one domain at a time.

In Anypoint Studio, to associate an existing application with a domain:

. In the project explorer view, double click on the Mule application *Properties* > *Mule Project*. Notice a *Domain* field, which by default is set to `default`. This value gives each project its independent domain. Change this value. The dropdown list on this field displays all of the domains you've created in the current workspace.

image:assign+domain.png[assign+domain]

Note that when picking a domain, the Server Runtime of your project automatically becomes that of the domain because these must always match.

[NOTE]
====
If you're creating your applications outside Studio, then to associate an existing application with a domain, edit the `mule-artifact.json` file to include the domain property:

`domain: <name of domain folder>`

For example: 

`domain: mule-test-domain`
====

=== Referencing Shared Resources

In the following example, `mule-domain-config.xml`, an HTTP connector is defined as a shared resource.

[source,xml,linenums]
----
include::_sources/shared-resources_1.xml
----

Any Mule application associated with the domain can make use of the shared resource by referencing it within the configuration, just as you would reference a resource within the project itself. In the example below, the HTTP listener connector references the shared resource named `HTTP_Listener_Configuration`. 

[source,xml,linenums]
----
<mule>
   <flow name="httpService">
      <http:listener config-ref="HTTP_Listener_Configuration" path="/" doc:name="HTTP"/>
      <set-payload value="success" />
   </flow>
</mule>
----

In Studio's visual editor, you can simply pick the shared resource out of the dropdown list in the *Connector Configuration* field of the connector's properties editor:

image:pick+resource.png[pick+resource]

== Deploying with Shared Resources

In Anypoint Studio, when you deploy an application that is associated to a domain, by default Studio deploys both the application and the domain together. Also, when deploying a domain project, by default Studio deploys every application associated to it, as well. You can change these default behaviors by changing the Run Configuration for the domain. In fact, you can deploy any set of applications in your workspace together, even if they don't share the same domain.

To set this in Studio, open the drop-down menu next to the play button and select *Run Configurations*.

image:run+configurations+1.png[run+configurations+1]

Then pick the *General* tab, and tick or untick the boxes next to the projects that you want to always deploy together with the application that is currently selected on the navigation menu to the right.

image:run+configuration+3.png[run+configuration+3]

The steps below describe how to deploy your domain project and the applications outside Studio, to Standalone Mule.

. In Studio, select `File > Export`. Then in the folder named *Mule*, pick *Anypoint Studio Project to Mule Deployable Archive (includes Studio metadata)*. This creates a .zip file that you can deploy to Standalone Mule.
+
image:export.png[export]
+
[NOTE]
====
If you've created your Domain outside Studio, Zip the components of your domain project by selecting the `mule-domain-config.xml` file and, if you have one, the `lib` folder with its contents, and compressing them into a single zip file. Name this zip file with the name of the domain. Copy the zip file to `MULE_HOME/domains`. 

Note that right clicking the a folder and selecting *Compress* results in additional folders being added to your folder structure when Mule unzips your file, which causes deployment problems. Use the command line to zip your files recursively, or package your app as a zip file from Studio.
====
+
. Save, zip, and copy the zip file for each application that references this domain into the `MULE_HOME/apps` folder.
. Start Mule via the command console.
+
When Mule starts, it first deploys any domains found in the `MULE_HOME/domains` folder, then it deploys the applications in the `MULE_HOME/apps` folder, so that all domains are fully started before the applications start.

=== Deploying Domain Bundles

You also have the option of bundling the applications associated with a domain in your domain folder, then deploying the entire folder as a bundled unit. To do this, include an `apps` folder in your domain folder structure and place the zip files of your applications there.

image:domainBundle.png[domainBundle]

The deployment behavior is the same as deploying a domain and apps separately: Mule first deploys the domain itself, then the applications. Deploying domain bundles simplifies the deployment mechanism for teams by removing the manual step of deploying applications separately.

== Example Mule Domain Projects

The following code examples show sample `mule-domain-config.xml` files, each configured to share a single resource. Note that you can define multiple shared resources in your `mule-domain-config.xml` file.

=== HTTP

Sharing an HTTP connector within a domain allows you to reuse the same port within all the applications that belong to the domain.

[source,xml,linenums]
----
include::_sources/shared-resources_02.xml[]
----

=== HTTPS

Sharing an HTTPS connector within a domain allows you to reuse the same port within all the applications that belong to the domain.

[source,xml,linenums]
----
include::_sources/shared-resources_03.xml[]
----

=== VM

*_Enterprise_*

Sharing a VM connector allows multiple Mule applications within the same domain to communicate through VM queues. Defining a VM connector as a shared resource is a best practice for consuming services provided by other Mule applications within the same container.

[source,xml,linenums]
----
include::_sources/shared-resources_04.xml[]
----

=== JMS 

Sharing a JMS connector creates a common connection to the broker between multiple applications, minimizing the number of client connections to the broker. 

[source,xml,linenums]
----
include::_sources/shared-resources_05.xml[]
----

=== JMS Caching Connection Factory

Mule provides a caching connection factory for JMS connections to improve JMS resource utilization.

[source,xml,linenums]
----
include::_sources/shared-resources_06.xml[]
----

=== Database Configuration

Sharing a `db` configuration creates a common connection to a database between multiple applications, minimizing the number of client connections to the database.

[source,xml,linenums]
----
include::_sources/shared-resources_07.xml[]
----

=== TLS Context

Share link:/mule-user-guide/v/3.9/tls-configuration[TLS configurations] allows shared <<HTTP,listener configurations>> to use the same TLS configuration. +
Additionally, all data (including passwords) would only need to be visible at the domain level, so app developers could use the certificates without having to access other critical data.

[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<domain:mule-domain
        xmlns="http://www.mulesoft.org/schema/mule/core"
        xmlns:domain="http://www.mulesoft.org/schema/mule/ee/domain"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xmlns:spring="http://www.springframework.org/schema/beans"
        xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
        xsi:schemaLocation="
               http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
               http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
               http://www.mulesoft.org/schema/mule/ee/domain http://www.mulesoft.org/schema/mule/ee/domain/current/mule-domain-ee.xsd">

<tls:context name="customContext">
        <tls:trust-store path="trustStore" password="mulepassword"/>
        <tls:key-store path="clientKeystore" keyPassword="mulepassword" password="mulepassword"/>
</tls:context>

</domain:mule-domain>
----


=== WMQ 

*_Enterprise_*

Sharing a WMQ connector creates a common connection to the broker between multiple applications, minimizing the number of client connections to the broker.

To share a WMQ connector as a shared resource, you need to *remove* the mule-transport-wmq-ee-<mule-version>.jar from $MULE_HOME/lib/mule/per-app/ folder and *remove* native wmq jars from your application's $MULE_HOME/apps/<my-app>/lib/ directory. Place all these jars in the `$MULE_HOME/domains/<my-domain>/lib/` folder instead.

For example:

[%header%autowidth.spread]
|===
|Before |After
|$MULE_HOME/lib/mule/per-app/mule-transport-wmq-ee-<mule-version>.jar |$MULE_HOME/domains/<my-domain>/lib/mule-transport-wmq-ee-<mule-version>.jar
|$MULE_HOME/apps/<my-app>/lib/com.ibm.mq-7.0.jar |$MULE_HOME/domains/<my-domain>/lib/com.ibm.mq-7.0.jar
|$MULE_HOME/apps/<my-app>/lib/com.ibm.mq.jmqi-7.0.jar |$MULE_HOME/domains/<my-domain>/lib/com.ibm.mq.jmqi-7.0.jar
|$MULE_HOME/apps/<my-app>/lib/com.ibm.mqetclient-7.0.jar |$MULE_HOME/domains/<my-domain>/lib/com.ibm.mqetclient-7.0.jar
|$MULE_HOME/apps/<my-app>/lib/com.ibm.mqjms-7.0.jar |$MULE_HOME/domains/<my-domain>/lib/com.ibm.mqjms-7.0.jar
|===

[source,xml,linenums]
----
include::_sources/shared-resources_08.xml[]
----

=== JBoss Transaction Manager 

When you define JMS connectors and `db` configurations as shared resources in your domain, you may have to use XA transactions in your applications. In this case, you must define the XA transaction manager in your domain configuration as well. 

[source,xml,linenums]
----
include::_sources/shared-resources_09.xml[]
----

=== Bitronix Transaction Manager

*_Enterprise_*

When you define JMS connectors and `db` configurations as shared resources in your domain, you may have to use XA transactions in your applications. In this case, you must define the XA transaction manager in your domain configuration as well. 

[source,xml,linenums]
----
include::_sources/shared-resources_10.xml[]
----

The Bitronix module integration also provides a JMS connection factory pool and a datasource pool to be used when using a datasource with XA transactions. You can define either or both of them as shared resources.

[source,xml,linenums]
----
include::_sources/shared-resources_11.xml[]
----

== Tips

* If you have existing applications that you created in Studio and you want to modify them to use shared resources you can follow all the same steps above.
* Connectors defined at the domain level are automatically used as the default connectors for the applications deployed in those domains. When only one connector of a specific type is defined at the domain level and the application doesn't explicitly contain a reference to another connector of the same type, then the one defined at the domain level is used as the default connector for that application. In such case the `connector-ref` or `config-ref` attribute to use the shared resource is optional.
* Note that although shared resources is limited to the selected connectors and libraries covered in this document, there are ways to share other configuration fragments in Mule. Refer to link:http://docs.mulesoft.com/mule-user-guide/v/3.9/sharing-custom-configuration-fragments[Sharing Custom Configuration Fragments] for details.

== See Also

Access reference documentation for:

* link:http://docs.mulesoft.com/mule-user-guide/v/3.9/vm-transport-reference[VM]
* link:http://docs.mulesoft.com/mule-user-guide/v/3.9/database-connector[DB]
* link:http://docs.mulesoft.com/mule-user-guide/v/3.9/jms-transport-reference[JMS]
* link:http://docs.mulesoft.com/mule-user-guide/v/3.9/http-connector[HTTP Connector]
* link:http://docs.mulesoft.com/mule-user-guide/v/3.9/mule-wmq-transport-reference[WMQ]
* link:http://docs.mulesoft.com/mule-user-guide/v/3.9/jboss-transaction-manager-reference[JBoss]
* link:http://docs.mulesoft.com/mule-user-guide/v/3.9/setting-environment-variables[Set Environment Variables]
